<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataEntry">

    <EditText
        android:id="@+id/addUsersTxtBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_style"
        android:padding="10dp"
        android:hint="@string/add_users"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_users_background"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/addShopTxtBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_style"
        android:hint="@string/add_shop"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_users_background"
        android:autofillHints=""
        android:inputType="text"
        />
    <EditText
        android:id="@+id/addCategoryTxtBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_style"
        android:hint="@string/add_category"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:inputType="text"
        android:background="@drawable/login_users_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Spinner
            android:id="@+id/selectCategoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:spinnerMode="dialog"
            android:background="@drawable/login_users_background"
            />
    <EditText
        android:id="@+id/addSubCatTxtBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:cursorVisible="true"
        android:layout_weight="1"
        android:textCursorDrawable="@drawable/cursor_style"
        android:hint="@string/add_sub_category"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_users_background"
        android:autofillHints=""
        android:inputType="text"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Spinner
            android:id="@+id/selectSubCategoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:spinnerMode="dialog"
            android:background="@drawable/login_users_background"
            />
    <EditText
        android:id="@+id/addItemsTxtBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_style"
        android:layout_marginRight="10dp"
        android:hint="@string/add_items"
        android:background="@drawable/login_users_background"
        android:autofillHints=""
        android:inputType="text"
        />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dataSubmitBtn"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/submit"
        android:layout_marginTop="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/button_ripple_effect"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/errorResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />

</LinearLayout>